--- a/containers/nginx-phpfpm/docker-compose.yml
+++ b/containers/nginx-phpfpm/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services: 
     web: 
         image: didyoun/ubuntu-nginx
+        container_name: app-web
         ports:
             - "8080:80"
         volumes:
@@ -17,12 +18,14 @@ services:
             - mysql:db
     phpfpm:
         image: didyoun/php-7.0:fpm
+        container_name: app-phpfpm
         ports:
             - "9000:9000"
         volumes:
             - ./app:/data/www/
     mysql:
         image: mysql
+        container_name: app-mysql
         environment:
             MYSQL_DATABASE: app
             MYSQL_ROOT_PASSWORD: admin
@@ -33,6 +36,7 @@ services:
             - ./docker/shared/:/data/shared/
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
+        container_name: app-phpmyadmin
         restart: always
         links:
             - mysql:db
