#master : add xdebug, intcl to dockerfile (php)

--- a/Dockerfiles/php7-fpm/Dockerfile
+++ b/Dockerfiles/php7-fpm/Dockerfile
@@ -22,14 +22,18 @@ RUN apt-get update && apt-get install -y \
         libpspell-dev \
         libldap2-dev \
         unixodbc-dev \
+        libicu-dev \
+        g++ \
         libpq-dev
+# Xdebug
+RUN pecl install xdebug-2.5.0 
 # https://bugs.php.net/bug.php?id=49876
 RUN ln -fs /usr/lib/x86_64-linux-gnu/libldap.so /usr/lib/
 # Install PHP extensions
 RUN echo "Installing PHP extensions" \
-    && docker-php-ext-install -j$(nproc) iconv mcrypt gd pdo_mysql pdo_pgsql pcntl pdo_sqlite zip curl bcmath opcache simplexml xmlrpc xml soap session readline pspell ldap mbstring \
+    && docker-php-ext-install -j$(nproc) iconv mcrypt gd pdo_mysql pdo_pgsql pcntl pdo_sqlite zip curl intl bcmath opcache simplexml xmlrpc xml soap session readline pspell ldap mbstring \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-    && docker-php-ext-enable iconv mcrypt gd pdo_mysql pdo_pgsql pcntl pdo_sqlite zip curl bcmath opcache simplexml xmlrpc xml soap session readline pspell ldap mbstring \
+    && docker-php-ext-enable xdebug intl iconv mcrypt gd pdo_mysql pdo_pgsql pcntl pdo_sqlite zip curl bcmath opcache simplexml xmlrpc xml soap session readline pspell ldap mbstring \
     && apt-get clean all 
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --filename=composer --install-dir=/bin
@@ -37,4 +41,4 @@ ENV PATH /root/.composer/vendor/bin:$PATH
 # Expose port
 EXPOSE 9000
 # Copy custom php.ini
-COPY ./php.ini /usr/local/etc/php/conf.d/php.ini
+COPY ./conf/php.ini /usr/local/etc/php/conf.d/php.ini
